--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,15 +21,15 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-    - uses: docker-practice/actions-setup-docker@0.0.1
-#     - uses: cypress-io/github-action@v1.16.1
-    
+    #- uses: docker-practice/actions-setup-docker@0.0.1
+    #- uses: cypress-io/github-action@v1.16.1
+
     # Runs a single command using the runners shell
     - name: Run a one-line script
-      run: echo Hello, world!
+      run: echo docker --version
 
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
       run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+        cd e2e,
+        ls -lha.
