--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,10 +26,13 @@ jobs:
 
     # Runs a single command using the runners shell
     - name: Run a one-line script
-      run: echo docker --version
+      run: docker --version
+
+    - name: list current dir
+      run: ls -lha
 
     # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
-      run: |
-        cd e2e,
-        ls -lha.
+    # - name: Run a multi-line script
+    #   run: |
+    #     cd e2e,
+    #     ls -lha.
