--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -13,7 +13,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "test"
-  test:
+  e2e-test:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -23,16 +23,15 @@ jobs:
     - uses: actions/checkout@v2
     #- uses: docker-practice/actions-setup-docker@0.0.1
     #- uses: cypress-io/github-action@v1.16.1
-
     # Runs a single command using the runners shell
-    - name: Print docker version
-      run: docker --version
+    # - name: Print docker version
+    #   run: docker --version
 
     - name: Print docker-compose version
       run: docker-compose --version
 
     - name: Print docker-compose version
-      run: docker-compose -f docker-compose-test.yml up --exit-code-from cypress
+      run: docker-compose -f docker-compose-e2e.yml up --exit-code-from cypress
 
     # - name: list current dir
     #   run: docker-compose up
