--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -23,20 +23,9 @@ jobs:
     - uses: actions/checkout@v2
     #- uses: docker-practice/actions-setup-docker@0.0.1
     #- uses: cypress-io/github-action@v1.16.1
-    # Runs a single command using the runners shell
-    # - name: Print docker version
-    #   run: docker --version
 
     - name: Print docker-compose version
       run: docker-compose --version
 
-    - name: Print docker-compose version
+    - name: Run e2e tests using cypress
       run: docker-compose -f docker-compose-e2e.yml up --exit-code-from cypress
-
-    # - name: list current dir
-    #   run: docker-compose up
-    # Runs a set of commands using the runners shell
-    # - name: Run a multi-line script
-    #   run: |
-    #     cd e2e,
-    #     ls -lha.
