--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -18,8 +18,6 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-    #- uses: docker-practice/actions-setup-docker@0.0.1
-    #- uses: cypress-io/github-action@v1.16.1
 
     - name: Print docker version
       run: docker-compose --version
@@ -27,22 +25,9 @@ jobs:
     - name: Run e2e tests using cypress
       run: docker-compose -f docker-compose-e2e.yml up --exit-code-from cypress
 
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-
-      - name: docker login
-        env:
-          DOCKER_USER:{{secret.DOCKER_USER}}
-          DOCKER_PASS:{{secret.DOCKER_PASS}}
-
-        run: docker login -u $DOCKER_USER -p $DOCKER_PASS
-
-      - name: docker build
-        run: docker build . -t dv4all/go-oauth:0.7.0
-
-      - name: docker push
-        run: docker push dv4all/go-oauth:0.7.0
+    - name: Build and publish to DockerHub
+      run: |
+      VERSION = $(date +%s)
+      docker build . -t dv4all/go-oauth:${VERSION}
+      docker login -u ${{secret.DOCKER_USER}} -p ${{secret.DOCKER_PASS}}
+      docker push dv4all/go-oauth:${VERSION}
