chore: changed version strategy to manual versioning

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -28,9 +28,6 @@ jobs:
     - name: Build and publish to DockerHub
       run: |
         export API_VERSION=$(cat .version)
-        export PATCH_DATE=$(date +%s)
-        docker build . -t dv4all/go-oauth:${API_VERSION}${PATCH_DATE}
+        docker build . -t dv4all/go-oauth:${API_VERSION}
         docker login -u ${{secrets.DOCKER_USER}} -p ${{secrets.DOCKER_PASS}}
-        docker push dv4all/go-oauth:${API_VERSION}${PATCH_DATE}
-        docker tag dv4all/go-oauth:${API_VERSION}${PATCH_DATE} dv4all/go-oauth:latest
-        docker push dv4all/go-oauth:latest
+        docker push dv4all/go-oauth:${API_VERSION}
