--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -9,7 +9,7 @@ on:
     branches: [ docker ]
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
+  # This workflow contains a single job called "publish"
   publish:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
@@ -19,11 +19,8 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
-    - name: Print docker version
-      run: docker-compose --version
-
-    # - name: Run e2e tests using cypress
-    #   run: docker-compose -f docker-compose-e2e.yml up --exit-code-from cypress
+    - name: Run e2e tests (cypress)
+      run: docker-compose -f docker-compose-e2e.yml up --exit-code-from cypress
 
     - name: Build and publish to DockerHub
       run: |
